<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:background="#2c2c2c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/nam"
                android:hint="@string/first"
                android:inputType="text"
                android:padding="10dp"
                android:background="#5b5a5c"
                style="@style/buttonstyle"
                android:layout_marginTop="32dp"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/lstnam"
                android:hint="@string/last"
                android:inputType="text"
                android:padding="10dp"
                style="@style/buttonstyle"
                android:background="#5b5a5c"
                android:layout_below="@+id/nam"
                android:layout_marginTop="32dp"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/ag"
                android:hint="@string/agee"
                android:inputType="number"
                android:padding="10dp"
                style="@style/buttonstyle"
                android:background="#5b5a5c"
                android:layout_below="@+id/lstnam"
                android:layout_marginTop="32dp"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/saving"
                android:onClick="save"
                android:text="@string/sav"
                style="@style/buttonstyle"
                android:background="#5b5a5c"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/canceling"
                android:layout_alignParentRight="true"
                android:onClick="cancel"
                android:text="@string/canc"
                style="@style/buttonstyle"
                android:background="#5b5a5c"
                android:layout_marginRight="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>